Add company service
Add base implementation for company service
