# Water/Water/Controllers/UsersController.cs
@@ -1,6 +1,9 @@
 ﻿using Microsoft.AspNetCore.Mvc;
 using System;
+using Water.Entities;
 using Water.Services;
+using Water.Services.Impl.Helpers;
+
 namespace Water.Controllers
 {
 	/// <summary>
@@ -24,14 +27,14 @@ namespace Water.Controllers
 		/// <summary>
 		/// Authenticates the given login request
 		/// </summary>
-		/// <param name="model"><see cref="Entities.AuthenticateRequest"/>Authentication request model</param>
+		/// <param name="model"><see cref="AuthenticateRequest"/>Authentication request model</param>
 		/// <returns> Authenticated user data </returns>
-		/// <response code="200"><see cref="Entities.AuthenticateResponse" />Authentication response</response>
+		/// <response code="200"><see cref="AuthenticateResponse" />Authentication response</response>
 		/// <response code="400"><see cref="BadRequestObjectResult"/>Bad request</response>
 		[HttpPost("Authenticate")]
-		public ActionResult<Entities.AuthenticateResponse> Authenticate(Entities.AuthenticateRequest model)
+		public ActionResult<Entities.AuthenticateResponse> Authenticate([FromBody]AuthenticateRequest model)
 		{
-			AuthenticateRequest serviceModel = Converter.ConvertAuthenticateRequestToService(model);
+			UserAuthenticateRequest serviceModel = Converter.ConvertAuthenticateRequestToService(model);
 			Entities.AuthenticateResponse response = Converter.ConvertAuthenticateResponseToEntity(_userService.Authenticate(serviceModel));
 
 			if (response == null)
@@ -40,6 +43,45 @@ namespace Water.Controllers
 			}
 
 			return Ok(response);
+			}
+
+		/// <summary>
+		/// Gets user by given id
+		/// </summary>
+		/// <param name="id"><see cref="string"/> User id </param>
+		/// <returns> User model </returns>
+		/// <response code="200"><see cref="UserItem" />User model</response>
+		/// <response code="400"><see cref="BadRequestObjectResult"/>Bad request</response>
+		[HttpGet("User/{id?}")]
+		public ActionResult<UserItem> GetUserById([FromRoute]string id)
+		{
+			try
+			{
+				Entities.User user = Converter.ConvertUserToEntity(_userService.GetById(id));
+
+				return Ok(user);
+			}
+			catch (Exception e)
+			{
+				return BadRequest(new Error
+				{
+					Message = e.Message,
+					StackTrace = e.StackTrace.Trim(),
+				});
+			}
+		}
+
+		/// <summary>
+		/// Authenticates the given login request
+		/// </summary>
+		/// <returns> Authenticated user data </returns>
+		/// <response code="200"><see cref="Entities.AuthenticateResponse" />Authentication response</response>
+		/// <response code="400"><see cref="BadRequestObjectResult"/>Bad request</response>
+		[HttpGet("Test")]
+		[Authorize]
+		public ActionResult<string> Test()
+		{
+			return "It worked";
 		}
 
 		/// <summary>
@@ -47,10 +89,10 @@ namespace Water.Controllers
 		/// </summary>
 		/// <param name="model" in="body"><see cref="Entities.User"/>Register user model</param>
 		/// <returns> Register message </returns>
-		/// <response code="200"><see cref="OkResult" />Ok response</response>
-		/// <response code="400"><see cref="BadRequestObjectResult"/>Bad request</response>
+		/// <response code="200"><see cref="OkResult" />Ok response with message</response>
+		/// <response code="400"><see cref="BadRequestObjectResult"/>Bad request with the exception</response>
 		[HttpPost("Register")]
-		public ActionResult<string> Register(Entities.User model)
+		public ActionResult<string> Register([FromBody]Entities.User model)
 		{
 			try
 			{
@@ -59,7 +101,11 @@ namespace Water.Controllers
 			}
 			catch (Exception e)
 			{
-				return BadRequest(new { message = e.Message });
+				return BadRequest(new Error
+				{
+					Message = e.Message,
+					StackTrace = e.StackTrace.Trim(),
+				});
 			}
 		}
 	}
